v0.1/src/frontend/my_parser.c
#include "my_parser.h"

#include <assert.h>

#include <stdlib.h>
#include <stdarg.h>
#include <stdbool.h>
#include <stddef.h>
#include <stdint.h>
#include <stdio.h>
#include <string.h>
#include <time.h>

#include "main.h"

#include "type.h"
#include "object.h"
#include "memory.h"

#include "my_lexer.h"
#include "token_type.h"
#include "token.h"
#include "value.h"
#include "parse_err_handler.h"

#include "ast_object.h"
#include "ast_node_headers.h"
#include "value_fun.h"
#include "predefined.h"

#include "def_type.h"
#include "symbol.h"
#include "symbol_table.h"
#include "symbol_table_stack.h"


#define MAX_PARSE_ERRORS 16





void *parser_constructor(void *self, va_list *ap);
void *parser_destructor(void *self);

const struct Type _class_parser = {
	sizeof(struct Parser),
	parser_constructor,
	parser_destructor
};


const void *Parser = &_class_parser;



// ... = new(Parser, lexer);

void *parser_constructor(void *_self, va_list *ap) {
	struct Parser *self = _self;
	assert(IS_PARSER(self));

	self->lexer = va_arg(*ap, const void *);
	assert(IS_LEXER(self->lexer));

	self->cur_token_index = 0;
	self->tokens = LEXER_GET_TOKENS(self->lexer);

	self->symbol_table_stack = NULL;
	self->program_ast = NULL;

	self->err_count = 0;
	self->had_error = false;

	return _self;
}


void *parser_destructor(void *_self) {
	struct Parser *self = _self;
	assert(IS_PARSER(self));

	
	if(0 != SYMBOL_TABLE_STACK_GET_SIZE(self->symbol_table_stack)) {
		void *popped_table = (void *) symtabstack_pop(self->symbol_table_stack);
		delete(popped_table);
	}

	if(NULL != self->program_ast)
		delete(self->program_ast);

	if(NULL != self->symbol_table_stack)
		delete(self->symbol_table_stack);

	return _self;
}







#define CUR_TOKEN(parser) ((struct Token *)parser->tokens[parser->cur_token_index])
#define PREV_TOKEN(parser) ((struct Token *)parser->tokens[parser->cur_token_index - 1])

#define P_MATCH(parser, expected) (((struct Token *)parser->tokens[parser->cur_token_index])->token_type.ordinal == (expected.ordinal))
#define P_PEEK(parser, expected) (((struct Token *)parser->tokens[parser->cur_token_index + 1])->token_type.ordinal == (expected.ordinal))




bool p_match_any(const struct Parser *self, int count, ...) {
	va_list ap;
	va_start(ap, count);

	struct Token *token = CUR_TOKEN(self);

	for(uint32_t i = 0; i < count; i++) {
		const struct TokenType expected = va_arg(ap, const struct TokenType);

		if(token->token_type.ordinal == expected.ordinal) {
			va_end(ap);
			return true;
		}
	}

	va_end(ap);
	return false;
}

void p_advance(struct Parser *self) {
	struct Token *token = CUR_TOKEN(self);

	if(token->token_type.ordinal != TOKEN_TYPE_EOF.ordinal)
		self->cur_token_index++;
}

bool p_consume(struct Parser *self, struct TokenType expected) {
	if(P_MATCH(self, expected)) {
		p_advance(self);
		return true;
	}
	return false;
}




void p_flag_error_va(
	struct Parser *self,
	bool display_line, const uint32_t line_number,
	const char *err_line, const uint32_t err_index, const uint32_t err_token_length,
	const char *err_msg, va_list *ap
) {
	fprintf(stderr, "\n");
	vfprintf(stderr, err_msg, *ap);
	fprintf(stderr, "\n");

	if(display_line) {
		fprintf(stderr, "-%03d-| ", line_number);

		for(uint32_t i = 0; err_line[i] != '\0'; i++) {
			char c = err_line[i];
			
			if('\t' == c)
				c = ' ';

			fprintf(stderr, "%c", c);
		}

		for(uint32_t i = 0; i < (err_index + 7); i++)
			fprintf(stderr, " ");

		for(uint32_t i = 0; i < err_token_length; i++)
			fprintf(stderr, "^");
		
		fprintf(stderr, "\n\n");
	}

	if(is_prompt_mode()) return;

	if(self->err_count >= MAX_PARSE_ERRORS) {
		fprintf(stderr, "\nToo many errors!\n");
		exit(EXIT_FAILURE);
	}

	self->err_count++;
}


void p_raise_error(
	struct Parser *self,
	const struct Token *err_token,
	const char *err_msg, ...
) {

	va_list ap;
	va_start(ap, err_msg);

	if(NULL == err_token) {
		p_flag_error_va(self, false, 0, NULL, 0, 0, err_msg, &ap);
	}
	else {
		const int line_index = err_token->line_index;
		const char *err_line = LEXER_GET_LINE(self->lexer, line_index);
		const int err_index = err_token->start_index;

		self->had_error = true;
		
		p_flag_error_va(
			self, true, (line_index + 1),
			err_line, err_index, err_token->length, err_msg, &ap
		);
	}

	va_end(ap);
}




void p_raise_error_expr(
	struct Parser *self,
	const void *expr,
	const char *err_msg, ...
) {

	va_list ap;
	va_start(ap, err_msg);

	const struct Token *lmost = get_leftmost_token(expr);
	const struct Token *rmost = get_rightmost_token(expr);

	fprintf(stderr, "\n");
	vfprintf(stderr, err_msg, ap);
	fprintf(stderr, "\n");

	if(lmost->line_index == rmost->line_index) {
		const int line_number = lmost->line_index + 1;
		fprintf(stderr, "-%03d-| ", line_number);

		const char *err_line = LEXER_GET_LINE(self->lexer, lmost->line_index);
		const int start = lmost->start_index;
		const int end = rmost->start_index + rmost->length;

		for(int i = 0; err_line[i] != '\0'; i++) {
			char c = err_line[i];
			
			if('\t' == c) c = ' ';

			fprintf(stderr, "%c", c);
		}

		for(int i = 0; i < (start + 7); i++)
			fprintf(stderr, " ");
		
		for(int i = 0; i < (end - start); i++)
			fprintf(stderr, "^");

		fprintf(stderr, "\n\n");
	}

	// what if they are on diff. lines
	else {
		
	}

	va_end(ap);

	if(is_prompt_mode())
		return;

	if(self->err_count >= MAX_PARSE_ERRORS) {
		fprintf(stderr, "\nToo many errors!\n");
		exit(EXIT_FAILURE);
	}

	self->err_count++;
}




/*
|==============================>
| Declaration parser methods.
|==============================>
*/
void *program(struct Parser *self);

void *declaration(struct Parser *self);

// void *var_decl(struct Parser *self);
void *var_decl(struct Parser *self, enum DefinitionType def_type);
// void *var_init(struct Parser *self, const struct Token *prev_token);
void *var_init(struct Parser *self, const struct Token *prev_token, enum DefinitionType def_type);


// void *val_decl(struct Parser *self);
void *val_decl(struct Parser *self, enum DefinitionType def_type);
// void *val_init(struct Parser *self, const struct Token *prev_token);
void *val_init(struct Parser *self, const struct Token *prev_token, enum DefinitionType def_type);

// void *fun_decl(struct Parser *self);
void *fun_decl(struct Parser *self, enum DefinitionType def_type);

void *class_decl(struct Parser *self);

/*
|==============================>
| Statement parser methods.
|==============================>
*/
void *stmt(struct Parser *self);

void *expr_stmt(struct Parser *self);
// void *print_stmt(struct Parser *self);

void *if_stmt(struct Parser *self);
void *when_stmt(struct Parser *self);

void *loop_stmt(struct Parser *self);
void *repeat_stmt(struct Parser *self);

void *block_stmt(struct Parser *self);

void *break_stmt(struct Parser *self);
void *continue_stmt(struct Parser *self);
void *ret_stmt(struct Parser *self);


/*
|==============================>
| Expression parser methods.
|==============================>
*/
void *expr(struct Parser *self);

void *assignment(struct Parser *self);

void *logical_or(struct Parser *self);
void *logical_and(struct Parser *self);

void *equality(struct Parser *self);
void *comparison(struct Parser *self);

void *term(struct Parser *self);
void *factor(struct Parser *self);

void *unary(struct Parser *self);
void *molecule(struct Parser *self);
void *atom(struct Parser *self);






// program -> declaration* EOF ;

void *program(struct Parser *self) {
	bool last_decl_null = false;

	void *program_symbol_table = (void *) symtabstack_push(self->symbol_table_stack);

	uint32_t decl_count = 0;
	void **declarations = NULL;

	void *decl = NULL;

	for(
		const struct Token *token = CUR_TOKEN(self);
		token->token_type.ordinal != TOKEN_TYPE_EOF.ordinal;
		token = CUR_TOKEN(self)
	) {
		
		decl = declaration(self);

		declarations = reallocate(declarations, sizeof(void *), ++decl_count);
		declarations[decl_count - 1] = decl;

		// if call to declaration returns null
		// and if cur token is not eof => handle parse error

		if(NULL == decl) {
			last_decl_null = true;

			// const struct Token *cur_token = CUR_TOKEN(self);
			// if(!P_MATCH(self, TOKEN_TYPE_EOF)) {
			// 	p_raise_error(
			// 		self, cur_token,
			// 		"ParseError: Invalid syntax."
			// 	);
			// }

			break;
		}
	}

	if(!last_decl_null) {
		declarations = reallocate(declarations, sizeof(void *), ++decl_count);
		declarations[decl_count - 1] = NULL;
	}

	symtabstack_pop(self->symbol_table_stack);	// program_symbol_table

	return new(ProgramAst, program_symbol_table, declarations);
}


void *declaration(struct Parser *self) {
	if(P_MATCH(self, TOKEN_TYPE_VAR)) {
		return var_decl(self, DEF_TYPE_VARIABLE);
	}
	if(P_MATCH(self, TOKEN_TYPE_VAL)) {
		return val_decl(self, DEF_TYPE_CONSTANT);
	}
	if(P_MATCH(self, TOKEN_TYPE_FUN)) {
		return fun_decl(self, DEF_TYPE_FUN);
	}
	if(P_MATCH(self, TOKEN_TYPE_CLASS)) {
		return class_decl(self);
	}

	return stmt(self);
}




// var_decl -> "var" var_init ("," var_init)* ";" ;
// var_decl -> "var" (IDENTIFIER ("=" expr)?) ("," (IDENTIFIER ("=" expr)?) )* ";" ;

void *var_decl(struct Parser *self, enum DefinitionType def_type) {
	const struct Token *var_token = CUR_TOKEN(self);
	p_advance(self);

	void *symbol = var_init(self, var_token, def_type);

	if(NULL == symbol)
		return NULL;


	uint32_t symbols_count = 0;

	void **symbols = allocate(sizeof(void *), ++symbols_count);
	symbols[symbols_count - 1] = symbol;

	const struct Token *comma_token = NULL;

	while(P_MATCH(self, TOKEN_TYPE_COMMA)) {
		comma_token = CUR_TOKEN(self);
		p_advance(self);

		symbol = var_init(self, comma_token, def_type);

		if(NULL == symbol) {
			free(symbols);
			return NULL;
		}

		symbols = reallocate(symbols, sizeof(void *), ++symbols_count);
		symbols[symbols_count - 1] = symbol;
	}

	if(!p_consume(self, TOKEN_TYPE_SEMICOLON)) {
		free(symbols);

		p_raise_error(
			self, var_token,
			"SyntaxError: Expected ';' after var statement."
		);

		return NULL;
	}

	symbols = reallocate(symbols, sizeof(void *), ++symbols_count);
	symbols[symbols_count - 1] = NULL;

	return new(VarDecl, symbols);
}



// var_init -> IDENTIFIER ("=" expr)? ;

void *var_init(
	struct Parser *self,
	const struct Token *prev_token,
	enum DefinitionType def_type
) {

	const struct Token *id_token = NULL;

	if(P_MATCH(self, TOKEN_TYPE_IDENTIFIER)) {
		id_token = CUR_TOKEN(self);
		p_advance(self);
	}
	else {
		p_raise_error(
			self, prev_token,
			"SyntaxError: Expected Identifier after '%.*s'.", prev_token->length, prev_token->start
		);

		return NULL;
	}

	char *id = allocate(sizeof(char), id_token->length + 1);
	strncpy(id, id_token->start, id_token->length);

	const void *local_symbol_table = symtabstack_get_local_table(self->symbol_table_stack);

	if(NULL != symbol_table_lookup(local_symbol_table, id)) {

		p_raise_error(
			self, id_token,
			"Error: Redefinition of '%s'.", id
		);

		free(id);
		return NULL;
	}

	
	void *init_expr = NULL;

	if(P_MATCH(self, TOKEN_TYPE_EQUAL)) {
		const struct Token *equal_token = CUR_TOKEN(self);
		p_advance(self);

		init_expr = expr(self);
		
		if(NULL == init_expr) {
			free(id);
			
			p_raise_error(
				self, equal_token,
				"SyntaxError: Expected some expression after '='."
			);
			return NULL;
		}
	}

	// void *symbol = new(Symbol, id, local_symbol_table, DEF_TYPE_VARIABLE);
	void *symbol = new(Symbol, id, local_symbol_table, def_type);

	if(NULL != init_expr)
		symbol_set_attr(symbol, SYM_ATTR_KEY_INIT_EXPR, init_expr);

	symbol_table_define(local_symbol_table, id, symbol);

	return symbol;
}




// val_decl -> "val" val_init ("," val_init)* ";" ;
// val_decl -> "val" (IDENTIFIER "=" expr) ("," (IDENTIFIER "=" expr) )* ";" ;

void *val_decl(struct Parser *self, enum DefinitionType def_type) {
	const struct Token *val_token = CUR_TOKEN(self);
	p_advance(self);

	void *symbol = val_init(self, val_token, def_type);

	if(NULL == symbol)
		return NULL;

	uint32_t symbols_count = 0;

	void **symbols = allocate(sizeof(void *), ++symbols_count);
	symbols[symbols_count - 1] = symbol;

	const struct Token *comma_token = NULL;

	while(P_MATCH(self, TOKEN_TYPE_COMMA)) {
		comma_token = CUR_TOKEN(self);
		p_advance(self);

		symbol = val_init(self, comma_token, def_type);

		if(NULL == symbol) {
			free(symbols);
			return NULL;
		}

		symbols = reallocate(symbols, sizeof(void *), ++symbols_count);
		symbols[symbols_count - 1] = symbol;
	}

	if(!p_consume(self, TOKEN_TYPE_SEMICOLON)) {
		free(symbols);

		p_raise_error(
			self, val_token,
			"SyntaxError: Expected ';' after val statement."
		);

		return NULL;
	}

	symbols = reallocate(symbols, sizeof(void *), ++symbols_count);
	symbols[symbols_count - 1] = NULL;
	
	return new(VarDecl, symbols);
}


// val_init -> IDENTIFIER "=" expr ;

void *val_init(struct Parser *self, const struct Token *prev_token, enum DefinitionType def_type) {
	const struct Token *id_token = NULL;

	if(P_MATCH(self, TOKEN_TYPE_IDENTIFIER)) {
		id_token = CUR_TOKEN(self);
		p_advance(self);
	}
	else {
		p_raise_error(
			self, prev_token,
			"SyntaxError: Expected Identifier after '%.*s'.", prev_token->length, prev_token->start
		);

		return NULL;
	}


	char *id = allocate(sizeof(char), id_token->length + 1);
	strncpy(id, id_token->start, id_token->length);

	const void *local_symbol_table = symtabstack_get_local_table(self->symbol_table_stack);

	// if(NULL != symtabstack_lookup(self->symbol_table_stack, id)) {
	if(NULL != symbol_table_lookup(local_symbol_table, id)) {
		p_raise_error(
			self, id_token,
			"Error: Redefinition of '%s'.", id
		);
		free(id);
		return NULL;
	}


	if(!P_MATCH(self, TOKEN_TYPE_EQUAL)) {
		free(id);

		p_raise_error(
			self, id_token,
			"Error: Expected expression to initialize constant value '%.*s'.", id_token->length, id_token->start
		);
		return NULL;
	}

	const struct Token *equal_token = CUR_TOKEN(self);
	p_advance(self);

	void *init_expr = expr(self);
	
	if(NULL == init_expr) {
		free(id);
		return NULL;
	}

	// void *symbol = new(Symbol, id, local_symbol_table, DEF_TYPE_CONSTANT);
	void *symbol = new(Symbol, id, local_symbol_table, def_type);
	symbol_set_attr(symbol, SYM_ATTR_KEY_INIT_EXPR, init_expr);

	symbol_table_define(local_symbol_table, id, symbol);

	return symbol;
}



// fun_decl		->  "fun" IDENTIFIER "(" parameters? ")" "{" declaration* "}" ;
// parameters	->  IDENTIFIER ("," IDENTIFIER) ;

void *fun_decl(struct Parser *self, enum DefinitionType def_type) {

	const struct Token *fun_token = CUR_TOKEN(self);
	p_advance(self);

	const struct Token *fun_id_token = NULL;

	if(P_MATCH(self, TOKEN_TYPE_IDENTIFIER)) {
		fun_id_token = CUR_TOKEN(self);
		p_advance(self);
	}
	else {
		p_raise_error(
			self, fun_token,
			"SyntaxError: Expected funtion's name after '%.*s'", fun_token->length, fun_token->start
		);

		return NULL;
	}

	char *fun_id = allocate(sizeof(char), fun_id_token->length + 1);
	strncpy(fun_id, fun_id_token->start, fun_id_token->length);


	// check if somtheing is already defined with that name
	const void *id_symbol = symtabstack_lookup(self->symbol_table_stack, fun_id);

	if(NULL != id_symbol) {
		if(DEF_TYPE_VARIABLE == SYMBOL_GET_DEF_TYPE(id_symbol)) {
			p_raise_error(
				self, fun_id_token,
				"Error: '%s' already declared as a varible.", fun_id
			);
		}
		else if(DEF_TYPE_CONSTANT == SYMBOL_GET_DEF_TYPE(id_symbol)) {
			p_raise_error(
				self, fun_id_token,
				"Error: '%s' already declared as a constant.", fun_id
			);
		}
		else if(DEF_TYPE_FUN == SYMBOL_GET_DEF_TYPE(id_symbol)) {
			p_raise_error(
				self, fun_id_token,
				"Error: Redefinition of function '%s'.", fun_id
			);
		}
		else {
			p_raise_error(
				self, fun_id_token,
				"Error: Redefinition of '%s'.", fun_id
			);
		}
		free(fun_id);

		return NULL;
	}




	const struct Token *lparen_token = NULL;

	if(P_MATCH(self, TOKEN_TYPE_LPAREN)) {
		lparen_token = CUR_TOKEN(self);
		p_advance(self);
	}
	else {
		p_raise_error(
			self, fun_id_token,
			"SyntaxError: Expected '(' after '%.*s'", fun_id_token->length, fun_id_token->start
		);

		return NULL;
	}

	const void *parent_symbol_table = symtabstack_get_local_table(self->symbol_table_stack);
	const void *fun_symbol_table = symtabstack_push(self->symbol_table_stack);

	uint32_t param_count = 0;
	void **param_symbols = NULL;


	// got some parameters
	if(P_MATCH(self, TOKEN_TYPE_IDENTIFIER)) {
		const struct Token *param_token = CUR_TOKEN(self);
		p_advance(self);



		char *param_id = allocate(sizeof(char), param_token->length + 1);
		strncpy(param_id, param_token->start, param_token->length);

		void *param_symbol = new(Symbol, param_id, fun_symbol_table, DEF_TYPE_VARIABLE);
		symbol_table_define(fun_symbol_table, param_id, param_symbol);



		param_symbols = allocate(sizeof(void *), ++param_count);
		param_symbols[param_count - 1] = param_symbol;

		while(P_MATCH(self, TOKEN_TYPE_COMMA)) {
			const struct Token *comma_token = CUR_TOKEN(self);
			p_advance(self);

			if(!P_MATCH(self, TOKEN_TYPE_IDENTIFIER)) {
				delete((void *) symtabstack_pop(self->symbol_table_stack));

				p_raise_error(
					self, comma_token,
					"SyntaxError: Expected a parameter after ','."
				);

				return NULL;
			}

			param_token = CUR_TOKEN(self);
			p_advance(self);

			param_id = allocate(sizeof(char), param_token->length + 1);
			strncpy(param_id, param_token->start, param_token->length);

			if(NULL != symbol_table_lookup(fun_symbol_table, param_id)) {
				delete((void *) symtabstack_pop(self->symbol_table_stack));

				p_raise_error(
					self, param_token,
					"Error: Parameter redefinition of '%s'.", param_id
				);

				return NULL;
			}

			param_symbol = new(Symbol, param_id, fun_symbol_table, DEF_TYPE_VARIABLE);
			symbol_table_define(fun_symbol_table, param_id, param_symbol);

			param_symbols = reallocate(param_symbols, sizeof(void *), ++param_count);
			param_symbols[param_count - 1] = param_symbol;
		}
	}

	const struct Token *rparen_token = NULL;

	if(P_MATCH(self, TOKEN_TYPE_RPAREN)) {
		rparen_token = CUR_TOKEN(self);
		p_advance(self);
	}
	else {
		delete((void *) symtabstack_pop(self->symbol_table_stack));
		free(param_symbols);

		p_raise_error(
			self, lparen_token,
			"SyntaxError: Unmatched '(', expected corresponding ')'."
		);
		return NULL;
	}


	// define the fun's symbol to allow recursion
	
	const void *fun_symbol = new(Symbol, fun_id, parent_symbol_table, def_type);
	symbol_table_define(parent_symbol_table, fun_id, fun_symbol);

	// void *fun_declaration = new(
	// 	FunDecl, fun_symbol, fun_symbol_table,
	// 	param_count, param_symbols, NULL
	// );
	// symbol_set_attr(fun_symbol, SYM_ATTR_KEY_AST, fun_declaration);


	const struct Token *lbrace_token = NULL;

	self->parsing_fun = true;

	if(P_MATCH(self, TOKEN_TYPE_LCURLY_BRACE)) {
		lbrace_token = CUR_TOKEN(self);
		p_advance(self);
	}
	else {
		delete((void *) symtabstack_pop(self->symbol_table_stack));
		free(param_symbols);

		p_raise_error(
			self, rparen_token,
			"SyntaxError: Expected '{' after ')'."
		);
		return NULL;
	}

	uint32_t decl_count = 0;
	void **declarations = NULL;

	#define FUN_FREE(self, decls, count) \
		do { \
			for(uint32_t i = 0; i < count; i++) \
				delete(decls[i]); \
			free(decls); 		\
			free(param_symbols);\
			\
			delete((void *) symtabstack_pop(self->symbol_table_stack)); \
		} while(0)


	while(!p_match_any(self, 2, TOKEN_TYPE_RCURLY_BRACE, TOKEN_TYPE_EOF)) {
		void *decl = declaration(self);

		if(NULL == decl) {
			FUN_FREE(self, declarations, decl_count);
			return NULL;
		}

		declarations = reallocate(declarations, sizeof(void *), ++decl_count);
		declarations[decl_count - 1] = decl;
	}

	if(!p_consume(self, TOKEN_TYPE_RCURLY_BRACE)) {
		FUN_FREE(self, declarations, decl_count);

		p_raise_error(
			self, lbrace_token,
			"SyntaxError: Expected corresponding '}' for '{'."
		);

		return NULL;
	}

	declarations = reallocate(declarations, sizeof(void *), ++decl_count);
	declarations[decl_count - 1] = NULL;

	void *fun_declaration = new(
		FunDecl, fun_symbol, fun_symbol_table,
		param_count, param_symbols, declarations
	);

	// fun_decl_set_declarations(fun_declaration, declarations);

	symtabstack_pop(self->symbol_table_stack);	// pop fun's symbol_table

	self->parsing_fun = false;

	return fun_declaration;
}


//	class_decl	->  "class" IDENTIFIER "{" var_decl* "} ;

void *class_decl(struct Parser *self) {
	const struct Token *class_token = CUR_TOKEN(self);
	p_advance(self);

	const struct Token *class_id_token = NULL;

	if(P_MATCH(self, TOKEN_TYPE_IDENTIFIER)) {
		class_id_token = CUR_TOKEN(self);
		p_advance(self);
	}
	else {
		p_raise_error(
			self, class_token,
			"SyntaxError: Expected class's name."
		);

		return NULL;
	}

	const struct Token *lbrace_token = NULL;

	if(P_MATCH(self, TOKEN_TYPE_LCURLY_BRACE)) {
		lbrace_token = CUR_TOKEN(self);
		p_advance(self);
	}
	else {
		p_raise_error(
			self, class_token,
			"SyntaxError: Expected class' body."
		);

		return NULL;
	}

	const void *parent_symbol_table = symtabstack_get_local_table(self->symbol_table_stack);

	// parsing class' body
	void *class_symbol_table = (void *) symtabstack_push(self->symbol_table_stack);


	char *it_id = allocate(sizeof(char), 2 + 1);
	strcpy(it_id, "it");

	void *it_symbol = new(Symbol, it_id, class_symbol_table, DEF_TYPE_CUR_INSTANCE_POINTER);
	symbol_table_define(class_symbol_table, it_id, it_symbol);


	uint32_t property_count = 0;
	void **properties = NULL;

	void *methods = NULL;

	while(!p_match_any(self, 2, TOKEN_TYPE_RCURLY_BRACE, TOKEN_TYPE_EOF)) {
		if(P_MATCH(self, TOKEN_TYPE_VAR) || P_MATCH(self, TOKEN_TYPE_VAL)) {
			
			const struct VarDecl *vardecl = NULL;

			if(P_MATCH(self, TOKEN_TYPE_VAR)) {
				vardecl = var_decl(self, DEF_TYPE_MUTABLE_PROPERTY);
			}
			else if(P_MATCH(self, TOKEN_TYPE_VAL)) {
				vardecl = var_decl(self, DEF_TYPE_IMMUTABLE_PROPERTY);
			}
			
			int last_count = property_count;
			int count = 0;

			for(int i = 0; NULL != vardecl->symbols[i]; i++) {
				count++;
			}
			
			property_count += count;
			properties = reallocate(properties, sizeof(void *), property_count);

			for(int i = last_count, j = 0; i < property_count; i++, j++) {
				properties[i] = vardecl->symbols[j];
			}

			delete((void *) vardecl);
		}
		else if(P_MATCH(self, TOKEN_TYPE_FUN)) {
			const struct FunDecl *fundecl = fun_decl(self, DEF_TYPE_METHOD);

			// it's wrong fix this, use a list instead of hashtable
			if(NULL == methods) {
				methods = new(HashTable);
			}

			// want to support method polymorphism
			hashtable_put(methods, SYMBOL_GET_ID(fundecl->symbol), fundecl);
		}
		else {
			// free and return

			p_raise_error(
				self, CUR_TOKEN(self),
				"SyntaxError: Garbage code."
			);
			p_advance(self);
			return NULL;
		}
	}

	symtabstack_pop(self->symbol_table_stack);	// class_symbol_table


	const struct Token *rbrace_token = NULL;

	if(!p_consume(self, TOKEN_TYPE_RCURLY_BRACE)) {
		p_raise_error(
			self, lbrace_token,
			"SyntaxError: Unmatched '{', expected corressponding '}'."
		);

		return NULL;
	}

	char *class_id = allocate(sizeof(char), class_id_token->length + 1);
	strncpy(class_id, class_id_token->start, class_id_token->length);

	void *class_symbol = new(Symbol, class_id, parent_symbol_table, DEF_TYPE_CLASS);
	symbol_table_define(parent_symbol_table, class_id, class_symbol);

	return new(ClassDecl, class_symbol, class_symbol_table, property_count, properties, methods);
}









// stmt -> expr_stmt | if_stmt | when_stmt | loop_stmt | repeat_stmt | block_stmt

void *stmt(struct Parser *self) {
	// printf("stmt()\n");

	if(P_MATCH(self, TOKEN_TYPE_IF))
		return if_stmt(self);

	if(P_MATCH(self, TOKEN_TYPE_WHEN))
		return when_stmt(self);

	else if(P_MATCH(self, TOKEN_TYPE_LOOP))
		return loop_stmt(self);

	else if(P_MATCH(self, TOKEN_TYPE_REPEAT))
		return repeat_stmt(self);

	else if(P_MATCH(self, TOKEN_TYPE_LCURLY_BRACE))
		return block_stmt(self);
	
	else if(P_MATCH(self, TOKEN_TYPE_BREAK))
		return break_stmt(self);
	
	else if(P_MATCH(self, TOKEN_TYPE_CONTINUE))
		return continue_stmt(self);
	
	else if(P_MATCH(self, TOKEN_TYPE_RET))
		return ret_stmt(self);

	// else if(P_MATCH(self, TOKEN_TYPE_PRINT))
	// 	return print_stmt(self);

	else
		return expr_stmt(self);
}



// expr_stmt -> expr ";" ;

void *expr_stmt(struct Parser *self) {
	const struct Token *token = CUR_TOKEN(self);

	void *expression = expr(self);

	if(NULL == expression) {
		return NULL;
	}

	if(!p_consume(self, TOKEN_TYPE_SEMICOLON)) {
		delete(expression);

		p_raise_error(
			self, token,
			"SyntaxError: Expected ';' after this expression."
		);
		return NULL;
	}

	return new(ExprStmt, expression);
}


// if_stmt -> "if" "(" expr ")" stmt ( "else" stmt )? ;

void *if_stmt(struct Parser *self) {
	const struct Token *if_token = CUR_TOKEN(self);
	p_advance(self);

	const struct Token *lparen_token = NULL;

	if(P_MATCH(self, TOKEN_TYPE_LPAREN)) {
		lparen_token = CUR_TOKEN(self);
		p_advance(self);
	}
	else {
		p_raise_error(
			self, if_token,
			"SyntaxError: Expected some expression in a pair of parenthesis after if."
		);
		return NULL;
	}

	void *expression = expr(self);

	if(NULL == expression) {
		p_raise_error(
			self, lparen_token,
			"SyntaxError: Expected some expression after '('."
		);
		return NULL;
	}

	if(!p_consume(self, TOKEN_TYPE_RPAREN)) {
		delete(expression);

		p_raise_error(
			self, lparen_token,
			"SyntaxError: Expected corresponding ')' for '('."
		);

		return NULL;
	}

	void *if_block = declaration(self);

	if(NULL == if_block) {
		delete(expression);

		p_raise_error(
			self, if_token,
			"SyntaxError: Expected some statement for if."
		);

		return NULL;
	}

	void *else_block = NULL;

	if(P_MATCH(self, TOKEN_TYPE_ELSE)) {
		const struct Token *else_token = CUR_TOKEN(self);
		p_advance(self);

		else_block = stmt(self);

		if(NULL == else_block) {
			delete(if_block);
			delete(expression);

			p_raise_error(
				self, else_token,
				"SyntaxError: Expected some statement for else."
			);

			return NULL;
		}
	}

	return new(IfStmt, expression, if_block, else_block);
}


/*
when_stmt	->  "when" "(" expr ")" "{"
					(term ("," term)* "->" stmt)+
					("else" -> stmt)?
				"}" ;
*/

void *when_case(struct Parser *self);

void *when_stmt(struct Parser *self) {
	// printf("when_stmt()\n");

	const struct Token *when_token = CUR_TOKEN(self);
	p_advance(self);

	const struct Token *lparen_token = NULL;
	const struct Token *rparen_token = NULL;
	const struct Token *lbrace_token = NULL;

	if(P_MATCH(self, TOKEN_TYPE_LPAREN)) {
		lparen_token = CUR_TOKEN(self);
		p_advance(self);
	} else {
		p_raise_error(
			self, when_token,
			"SyntaxError: Expected some expression in a pair of parenthesis after when."
		);

		return NULL;
	}
